--- a/MidGuard/joinroom.css
+++ b/MidGuard/joinroom.css
@@ -1,7 +1,3 @@
-/* ===================================
-   JOIN ROOM MODAL STYLES
-   =================================== */
-
 .modal-container {
     position: fixed;
     top: 0;
@@ -35,6 +31,8 @@
 
 .modal-container.active .modal-content {
     transform: scale(1);
+    background: #ffffff3d;
+    border-radius: 25px;
 }
 
 .modal-close {
@@ -125,4 +123,5 @@ body.dark .modal-content input {
 .backdrop.active {
     opacity: 1;
     pointer-events: all;
+
 }
